# QuantumThermalLab

./: .gitignore  BOM.csv  CLAIMS_BOUNDARY.md  FIRST_VALIDATION_EXPERIMENTS.md  INSTALL.md  Makefile  README.md  REVIEWER_COVER_NOTE.md  REVIEWER_QUESTIONS.md  SUBMISSION_EMAIL_DRAFT.md  assumed_parameters.json  best_forecast_operating_point.json  bibliography_audit.csv  cryopanel_memory_model.csv  engineering_fixes.csv  failed_gate_samples.csv  final_manifest.json  hardware_registry.json  interface_map.csv  interlock_table.csv  kill_gate_ranking.csv  manifest_hash.txt  measured_parameters.json  mode_transition_acceptance_tests.csv  monte_carlo_gate_failure_rates.csv  monte_carlo_parameter_registry.csv  monte_carlo_sensitivity_rankings.csv  monte_carlo_summary.csv  optical_line_of_sight_audit.csv  output_sync_report.txt  package_consistency_check.py  parameter_registry.csv  pyproject.toml  qta_full_sim.py  qta_manuscript_v4.tex  radiation_rf_leakage_budget.csv  rejected_baseline_BOM.csv  representative_source_audit.csv  results_gate_table.csv  reviewer_attack_map.md  (+13 more)
.github/workflows/: ci.yml
qta/: __init__.py  constants.py  engineering.py  gates.py  mc_parallel.py  model.py  monte_carlo.py  sim.py  sweep.py  viz.py
tests/: test_constants.py  test_engineering.py  test_mc_parallel.py  test_model.py  test_model_edge.py  test_sim.py  test_sweep.py  test_viz.py
